--- a/webapp/views/partials/header.ejs
+++ b/webapp/views/partials/header.ejs
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= title %> - Pizza Microservices</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/global.css">
+  <% if (typeof pageCSS !== 'undefined') { %>
+    <link rel="stylesheet" href="/css/<%= pageCSS %>.css">
+  <% } %>
 </head>
 <body>
   <nav class="navbar">
@@ -13,9 +16,17 @@
         <h2>🍕 Pizza Microservices</h2>
       </div>
       <ul class="nav-menu">
-        <li><a href="/menu">Menu</a></li>
-        <li><a href="/orders">My Orders</a></li>
-        <li><a href="/logout">Logout</a></li>
+        <% if (currentPage === 'home') { %>
+          <!-- Home page - show Login button -->
+          <li><a href="/menu">Menu</a></li>
+          <li><a href="/login">Login</a></li>
+        <% } else { %>
+          <!-- Authenticated pages - show full menu -->
+          <li><a href="/">Home</a></li>
+          <li><a href="/menu">Menu</a></li>
+          <li><a href="/orders">My Orders</a></li>
+          <li><a href="/logout">Logout</a></li>
+        <% } %>
       </ul>
     </div>
   </nav>
