--- a/webapp/public/css/auth.css
+++ b/webapp/public/css/auth.css
@@ -81,6 +81,33 @@
   border-color: #e74c3c;
 }
 
+/* Password Toggle */
+.password-wrapper {
+  position: relative;
+}
+
+.password-wrapper input {
+  padding-right: 45px;
+}
+
+.toggle-password {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: #666;
+  padding: 5px;
+  transition: color 0.3s;
+}
+
+.toggle-password:hover {
+  color: #e74c3c;
+}
+
 /* Auth Footer */
 .auth-footer {
   text-align: center;
