--- a/webapp/views/login.ejs
+++ b/webapp/views/login.ejs
@@ -30,7 +30,10 @@
 
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" placeholder="Enter your password" required>
+          <div class="password-wrapper">
+            <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            <button type="button" class="toggle-password" onclick="togglePassword('password')">👁️</button>
+          </div>
         </div>
 
         <button type="submit" class="btn btn-primary">Sign In</button>
@@ -50,7 +53,10 @@
 
         <div class="form-group">
           <label for="reg-password">Password</label>
-          <input type="password" id="reg-password" name="password" placeholder="Enter your password" required>          >
+          <div class="password-wrapper">
+            <input type="password" id="reg-password" name="password" placeholder="Enter your password" required>
+            <button type="button" class="toggle-password" onclick="togglePassword('reg-password')">👁️</button>
+          </div>
         </div>
 
         <button type="submit" class="btn btn-primary">Sign Up</button>
