--- a/webapp/views/partials/header.ejs
+++ b/webapp/views/partials/header.ejs
@@ -19,8 +19,13 @@
         <% if (typeof isLoggedIn !== 'undefined' && isLoggedIn) { %>
           <!-- Logged in users -->
           <li><a href="/">Home</a></li>
-          <li><a href="/menu">Menu</a></li>
-          <li><a href="/orders">My Orders</a></li>
+          <% if (typeof user !== 'undefined' && user && user.role === 'admin') { %>
+            <li><a href="/admin">Orders Dashboard</a></li>
+            <li><a href="/admin/menu">Manage Menu</a></li>
+          <% } else { %>
+            <li><a href="/menu">Menu</a></li>
+            <li><a href="/orders">My Orders</a></li>
+          <% } %>
           <li><a href="/logout">Logout</a></li>
         <% } else { %>
           <!-- Guest users -->
